<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="inputBinding"
            type="com.vinay.vymoassignment.data.models.Input" />
    </data>

    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical">

                <LinearLayout
                    android:id="@+id/relativeLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="30dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/gitOwnerName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:hint="@string/git_owner_name"
                        android:padding="20dp"
                        android:textSize="25dp"
                        android:text="@{inputBinding.owner_name}"/>

                    <EditText
                        android:id="@+id/gitRepoName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:hint="@string/git_repo_name"
                        android:padding="20dp"
                        android:textSize="25dp"
                        android:text="@{inputBinding.repo_name}"/>

                </LinearLayout>

                <Button
                    android:id="@+id/submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relativeLayout3"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="15dp"
                    android:background="@color/colorAccent"
                    android:text="@string/submit"
                    android:textColor="@color/colorAccent" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>