<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="repo"
            type="com.vinay.vymoassignment.data.models.RepoPulls" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/repoTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pull_title"
                        android:textColor="#1A1A1A"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/repoTitleValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{repo.title}"
                        android:textColor="#1A1A1A"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/prNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pr_number"
                        android:textColor="#1A1A1A"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/prNumberValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{Integer.toString(repo.number)}"
                        android:textColor="#1A1A1A"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/pullStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pull_status"
                        android:textColor="#1A1A1A"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/pullStatusValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{repo.state}"
                        android:textColor="#1A1A1A"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/created"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/created"
                        android:textColor="#1A1A1A"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/createdValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{repo.created_at}"
                        android:textColor="#1A1A1A"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>